--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="./node_modules/tw-elements/dist/js/index.min.js"></script>
+    <script type="module" src="./node_modules/tw-elements/dist/js/index.min.js"></script>
   </body>
 </html>
