--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="./node_modules/tw-elements/dist/js/index.min.js"></script>
   </body>
 </html>
